--- a/package.json
+++ b/package.json
@@ -22,10 +22,17 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.1.3",
+    "@nestjs/typeorm": "^9.0.1",
+    "@nguniversal/express-engine": "^14.2.1",
     "@nrwl/angular": "15.0.10",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.10",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
