--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@nguniversal/express-engine": "^14.2.1",
     "@nrwl/angular": "15.0.10",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mysql2": "^2.3.3",
