--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js",
     "start": "nx serve",
+    "serve:api": "npm run update-version && npm run cp-all-files && nx serve api --configuration=dev",
+    "serve:bo": "npm run update-version && nx serve app --port 4200 --host 0.0.0.0 --open --configuration=dev",
     "build": "nx build",
     "test": "nx test"
   },
@@ -21,6 +23,7 @@
     "@angular/router": "~14.2.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^9.0.1",
@@ -30,6 +33,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0",
