--- a/backend/package.json
+++ b/backend/package.json
@@ -74,7 +74,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "/app/src",
+    "rootDir": "./src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
