--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - checkout
       - run:
           name: Running container
+          command: npm run test1
 workflows:
   test_my_app:
     jobs:
