--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
       - checkout
       - run:
           name: Running container
-          command: npm run test1
+          - node/install-packages
+          command: npm run test
 workflows:
   test_my_app:
     jobs:
