--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,15 @@
-version: 2.1 
+version: 2.1
+orbs:
+  node: circleci/node@4.7.0
 jobs:
-  build:
+  test:
     docker:
       - image: sergiomesasyelamos2000/cc-proyecto-22-23:latest
     steps:
       - checkout
       - node/install-packages
-      - run:
-          name: Running container
-          command: npm run test
 workflows:
   test_my_app:
     jobs:
-      - build
+      - test
  
