--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,8 @@ jobs:
     docker:
       - image: sergiomesasyelamos2000/cc-proyecto-22-23:latest
     steps:
-      - checkout
+      - checkout:
+          path: /root/project/backend
       - run:
           name: Running container
           command: npm run test1
