--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,12 @@ jobs:
   test:
     docker:
       - image: sergiomesasyelamos2000/cc-proyecto-22-23:latest
+    working_directory: /root/project
     steps:
       - checkout:
           path: /root/project/backend
+      - run: npm install
+      - run: npm run test
       
 workflows:
   test_my_app:
