--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,7 @@ jobs:
       - image: sergiomesasyelamos2000/cc-proyecto-22-23:latest
     working_directory: /root/project/backend
     steps:
-      - checkout:
-          path: /root/project/backend
+      - checkout
       - node/install-packages
       - run: npm run test
       
