--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     working_directory: /root/project/backend
     steps:
       - checkout
-      - node/install-packages
+      - backend/node/install-packages
       - run: npm run test
       
 workflows:
