--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,8 @@ jobs:
     working_directory: /root/project/backend
     steps:
       - checkout
-      - run: 
-        npm cache clear -f
-        npm run jest --verbose
+      - run: npm cache clear -f
+      - run: npm run jest --verbose
       
 workflows:
   test_my_app:
