--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - checkout
       - run: npm cache clear -f
+      - run: rm /root/project/backend/package.json
+      - run: npm install
       - run: npm run jest --verbose
       
 workflows:
