--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - checkout
       - run: npm cache clear -f
+      - run: npm init
       - run: npm install
       - run: npm run jest --verbose
       
