--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,15 @@
 version: 2.1
-orbs:
-  node: circleci/node@4.7.0
+
 jobs:
   test:
     docker:
       - image: sergiomesasyelamos2000/cc-proyecto-22-23:latest
-    working_directory: /root/project/backend
     steps:
       - checkout
-      - run: npm install
-      - run: npm run jest --verbose
-      
+      - run: rake test
+
 workflows:
-  test_my_app:
+  test_project:
     jobs:
       - test
  
