--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,9 @@ jobs:
       - image: sergiomesasyelamos2000/cc-proyecto-22-23:latest
     steps:
       - checkout
-      - run: docker run sergiomesasyelamos2000/cc-proyecto-22-23:latest
+      - run: npm rm -rf node_modules && rm package-lock.json
+      - run: npm install
+      - run: npm run test
 
 workflows:
   test_project:
