--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: sergiomesasyelamos2000/cc-proyecto-22-23:latest
+      - image: sergiomesasyelamos2000/cc-proyecto-22-23
     steps:
       - checkout
       - run: cd backend && npm run test
