--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,10 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: sergiomesasyelamos2000/cc-proyecto-22-23
+      - image: sergiomesasyelamos2000/cc-proyecto-22-23:latest
     steps:
       - checkout
-      - run: cd backend && npm run test
+      - run: cd backend && npm install --save && npm run test
 
 workflows:
   test_project:
