--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,9 @@ jobs:
       - image: sergiomesasyelamos2000/cc-proyecto-22-23:latest
     steps:
       - checkout
-       name: Running tests
-      - run: cd backend && npm install --save && npm run test
+      - run: 
+        name: Running tests
+        command: cd backend && npm install --save && npm run test
 
 workflows:
   test_project:
