--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,12 +1,16 @@
 name: Run Tests
 
 on:
-  push:
-    branches: [ main ]
+  workflow_run:
+    workflows: ["GitHub Container Registry"]
+    branches: [main]
+    types:
+      - completed
 
 jobs:
   run_test:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v2
       - name: Lanzar Tests CI
