--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,16 +1,13 @@
 name: Run Tests 
 
 on:
-  workflow_run:
-    workflows: ["GitHub Container Registry"]
+  push:
     branches: [main]
-    types:
-      - completed
+ 
 
 jobs:
   run_test:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v2
       - name: Lanzar Tests CI
